# active-label

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE.spdx  LICENSE_HEADER.txt  README.md  pyproject.toml  tox.ini
src/active_label/: __init__.py  annotations.py
src/active_label/learning/: __init__.py  graph.py
tests/: test_active_label.py  test_annotator.py
tests/learning/: test_active_learning.py  test_equivalence_learning.py  test_partial_order_learning.py
